--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,4 +26,4 @@ jobs:
         run: python3 -m flake8
 
       - name: Run mypy
-        run: python3 -m mypy .
+        run: python3 -m mypy src/ferny
