--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install runtime and test dependencies
-        run: dnf install -y openssh-clients python3-mock-ssh-server python3-pytest python3-mypy python3-flake8
+        run: dnf install -y openssh-clients python3-mock-ssh-server python3-pytest python3-pytest-asyncio python3-mypy python3-flake8
 
       - name: Run unit tests
         run: python3 -m pytest
