--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,16 @@
 [build-system]
-requires = ["setuptools >= 61"]
+requires = [
+    "setuptools >= 61",
+    "setuptools_scm[toml] >= 6.2",
+]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "ferny"
-version = "0"
+dynamic = ["version"]
+
+[tool.setuptools_scm]
+write_to = "src/ferny/_version.py"
 
 [tool.mypy]
 mypy_path = 'src'
