--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,10 +13,16 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install runtime and test dependencies
-        run: dnf install -y openssh-clients python3-mock-ssh-server python3-pytest python3-pytest-asyncio python3-mypy python3-flake8
+        run: dnf install -y openssh-clients python3-mock-ssh-server python3-pytest-cov python3-pytest-asyncio python3-mypy python3-flake8 python3-pip
+
+      - name: Install ruff
+        run: python3 -m pip install ruff
 
       - name: Run unit tests
-        run: python3 -m pytest
+        run: python3 -m pytest --cov
+
+      - name: Run ruff
+        run: python3 -m ruff check .
 
       - name: Run flake8
         run: python3 -m flake8
