all: new approach to type hints compatibility
Nothing inside of ferny makes use of runtime inspection of static typing
hints, so let's take advantage of the fact that type hints are allowed
to be quoted to avoid some compatibility issues.

We now try to use the "latest and greatest" version of the type hints
available to us, quoting the entire type declaration where it would
otherwise cause problems with older Python versions.

Add some "banned import" rules to our ruff config to make sure we get
this right.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ select = [
     "F",
     "G",
     "I",
+    "TID",
 ]
 ignore = [
     "A003",      # Class attribute is shadowing a python builtin
@@ -54,6 +55,14 @@ line-length = 118
 
 [tool.ruff.flake8-annotations]
 allow-star-arg-any = true
+
+[tool.ruff.flake8-tidy-imports.banned-api]
+"typing.Dict".msg = "use 'dict[]' in quotes"
+"typing.List".msg = "use 'list[]' in quotes"
+"typing.Optional".msg = "use '| None' in quotes"
+"typing.Set".msg = "use 'set[]' in quotes"
+"typing.Type".msg = "use 'type[]' in quotes"
+"typing.Union".msg = "use '|' in quotes"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
