Add tox configuration
Copy the general approach of systemd_ctypes and Cockpit for running tox.
The default setup runs purely against system packages (and refuses to
download anything) but there is also a `-m venv` option which will do a
pure venv-based approach with packages from PyPI, for all Python
versions from 3.6 through 3.12.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ ignore_missing_imports = true
 max-line-length = 118
 
 [tool.pytest.ini_options]
+timeout = 30
 addopts = ["--strict-markers"]
 pythonpath = ["src"]
 log_cli = true
