--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install runtime and test dependencies
-        run: dnf install -y openssh-clients python3-mock-ssh-server python3-pytest-cov python3-pytest-asyncio python3-mypy python3-flake8 python3-pip
+        run: dnf install -y openssh-clients python3-asyncssh python3-pytest-cov python3-pytest-asyncio python3-mypy python3-flake8 python3-pip
 
       - name: Install ruff
         run: python3 -m pip install ruff
@@ -39,14 +39,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install distro runtime and test dependencies
-        # we need EPEL for python3-paramiko (required by mock-ssh-server)
         run: |
-          dnf install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
-          dnf install -y openssh-clients python3-paramiko python3-pip
+          dnf install -y openssh-clients python3-pip python3-cryptography
 
       # C8S does have python3-pytest, but it's too old for us
       - name: Install pip test dependencies
-        run: pip3 install pytest pytest-asyncio mock-ssh-server
+        # 2.14.0 and up need a too new python3-cryptography which we can't build in C8S
+        run: pip3 install pytest pytest-asyncio asyncssh==2.13.2
 
       - name: Run unit tests
         run: PYTHONPATH=src python3 -m pytest
