--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ wheel_build_env = venv-pkg
 skip_install = mypy,pycodestyle,ruff: True
 install_command = python3 -m pip install {opts} {packages}
 deps =
-  pytest,mypy: mock-ssh-server
+  pytest,mypy: asyncssh
   pytest,mypy: pytest-timeout
   pytest,mypy: pytest-asyncio
   pytest,mypy: pytest-cov
