--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,22 +13,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install runtime and test dependencies
-        run: dnf install -y openssh-clients python3-asyncssh python3-pytest-cov python3-pytest-asyncio python3-mypy python3-flake8 python3-pip
-
-      - name: Install ruff
-        run: python3 -m pip install ruff
+        run: dnf install -y openssh-clients python3-asyncssh python3-pytest-cov python3-pytest-asyncio
 
       - name: Run unit tests
-        run: python3 -m pytest --cov
-
-      - name: Run ruff
-        run: python3 -m ruff check .
-
-      - name: Run flake8
-        run: python3 -m flake8
-
-      - name: Run mypy
-        run: python3 -m mypy src/ferny
+        run: python3 -m pytest --color=yes --cov
 
   c8s:
     runs-on: ubuntu-latest
@@ -48,4 +36,4 @@ jobs:
         run: pip3 install pytest pytest-asyncio asyncssh==2.13.2
 
       - name: Run unit tests
-        run: PYTHONPATH=src python3 -m pytest
+        run: PYTHONPATH=src python3 -m pytest --color=yes
