workflows: Add Debian unstable test run
Fedora 39 and Rawhide have quite an old OpenSSH (9.3 at the moment).
Debian unstable has the latest 9.6. This reproduces the issues fixed
in the last two commits.

`test_cancel_askpass` hangs forever in Debian, skip this test for the
time being.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,3 +37,21 @@ jobs:
 
       - name: Run unit tests
         run: PYTHONPATH=src python3 -m pytest --color=yes
+
+  debian:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    container: docker.io/debian:unstable
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v3
+
+      - name: Install runtime and test dependencies
+        run: |
+          apt-get update
+          apt-get install -y python3-pytest-asyncio python3-pip openssh-client
+          pip3 install --break-system-packages asyncssh==2.13.2
+
+      - name: Run unit tests
+        # FIXME: test_cancel_askpass hangs forever
+        run: python3 -m pytest -k 'not test_cancel_askpass'
