--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,5 +55,4 @@ jobs:
           pip3 install --break-system-packages asyncssh==2.13.2
 
       - name: Run unit tests
-        # FIXME: test_cancel_askpass hangs forever
-        run: python3 -m pytest -k 'not test_cancel_askpass'
+        run: python3 -m pytest
