--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,4 +55,4 @@ jobs:
           pip3 install --break-system-packages asyncssh==2.13.2
 
       - name: Run unit tests
-        run: python3 -m pytest
+        run: python3 -m pytest --color=yes
