tox: Fix ruff invocation
Fixes

> error: `ruff <path>` has been removed. Use `ruff check <path>` instead.

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ deps =
   ruff: ruff
 commands =
   pytest: python3 -m pytest -opythonpath= {posargs:--cov}
-  ruff: ruff {posargs:src test}
+  ruff: ruff check {posargs:src test}
   mypy: python3 -m mypy {posargs:src test}
   pycodestyle: python3 -m pycodestyle --max-line-length=118 {posargs:src test}
 allowlist_externals = ruff,bash
