--- a/.github/workflows/tox.yaml
+++ b/.github/workflows/tox.yaml
@@ -1,4 +1,4 @@
-name: toxbox
+name: tox
 on:
   pull_request:
 jobs:
@@ -6,12 +6,29 @@ jobs:
     permissions: {}
 
     runs-on: ubuntu-latest
+    container: registry.fedoraproject.org/fedora:latest
 
-    timeout-minutes: 30
+    timeout-minutes: 20
+
+    env:
+      TOX_WORK_DIR: /tmp/.tox
+      COVERAGE_FILE: /tmp/.coverage
+      RUFF_CACHE_DIR: /tmp/.ruff_cache
+      MYPY_CACHE_DIR: /tmp/.mypy_cache
+      FORCE_COLOR: 1
 
     steps:
+      - name: Install tox dependencies
+        run: |
+          dnf install -y git-core tox util-linux
+          useradd tox
+
+      # https://github.blog/2022-04-12-git-security-vulnerability-announced/
+      - name: Pacify git's permission check
+        run: git config --global --add safe.directory /__w/cockpit/cockpit
+
       - name: Clone repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Run venv tests
-        run: test/run --color
+        run: runuser -u tox -- tox -m venv
