--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ deps =
   pytest,mypy: pytest-timeout
   pytest,mypy: pytest-asyncio
   pytest,mypy: pytest-cov
+  pytest,mypy: prompt-toolkit
   mypy: mypy
   ruff: ruff
 commands =
